--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -44,6 +44,21 @@
             <p ng-show="$ctrl.editCenter.center_web_link.$invalid" class="help-block ng-hide">Invalid Format(Correct format: www.google.com)</p>
           </div>
         </div>
+        <!-- listing type -->
+        <div class="adn-row">
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <label>Listing Type:</label>
+          </div>
+          <div class="col-md-8 col-sm-8 col-xs-12">
+            <select ng-model="$ctrl.listing_type" name="listing_type" required="true">
+              <option value="">Select Listing</option>
+              <option value="free">Free</option>
+              <option value="paid">Paid</option>
+              <option value="featured">Featured</option>
+            </select>
+            <p class="help-block" ng-show="$ctrl.editCenter.listing_type.$invalid">Required</p>
+          </div>
+        </div>
 
         <!-- Select State -->
         <div class="adn-row">
@@ -52,7 +67,7 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
             <state-select selected="$ctrl.state" on-update="$ctrl.onStateUpdate(selected)"></state-select>
-            <p ng-show="$ctrl.editCenter.state.$invalid">Required</p>
+            <p class="help-block" ng-show="$ctrl.editCenter.state.$invalid">Required</p>
           </div>
         </div>
 
@@ -65,7 +80,7 @@
               <option value="">Select City</option>
               <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
             </select>
-            <p ng-show="$ctrl.editCenter.city.$invalid">Required</p>
+            <p class="help-block" ng-show="$ctrl.editCenter.city.$invalid">Required</p>
           </div>
         </div>
 
@@ -222,6 +237,7 @@
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
             <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.editCenter.center_name.$invalid ||  $ctrl.editCenter.center_web_link.$invalid || $ctrl.editCenter.center_zip.$invalid || $root.center_phone===0 ||
             $ctrl.editCenter.description.$error.required || $ctrl.editCenter.city.$error.required || $ctrl.editCenter.state.$error.required || $ctrl.editCenter.content_1.$invalid || $ctrl.editCenter.content_2.$invalid || $ctrl.editCenter.content_3.$invalid ||
+            $ctrl.editCenter.listing_type.$invalid ||
             $ctrl.multiselectModelCategories.length === 0 || ($ctrl.zipFound === 0)">Submit</button>
           </div>
         </div>
