added username login

--- a/app/login/view.html
+++ b/app/login/view.html
@@ -7,10 +7,10 @@
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 pading_0">
           <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
-            <label>Email
+            <label>Email / Username
               <em class="em_star">*</em>
             </label>
-            <input placeholder="Email" id="email" name="email" class="form-control required" type="email" ng-model="$ctrl.email" required="true">
+            <input placeholder="Email" id="email" name="email" class="form-control required" type="text" ng-model="$ctrl.email" required="true">
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
             <label>Password
