--- a/app/myProfile/sponsorAds/edit/view.html
+++ b/app/myProfile/sponsorAds/edit/view.html
@@ -2,85 +2,40 @@
   <section-heading>Edit Sponsor Ad</section-heading>
   <div class="profile-content">
     <div class="profile-row">
-      <a href="javascript:history.go(-1);">
-        <span class="btn adn-btn right">
-          <i class="glyphicon glyphicon-hand-left"></i> Back
-        </span>
-      </a>
+
     </div>
-    <div class="profile-row">
-      <form name="sponsorAdsEdit" class="form-horizontal" ng-submit="$ctrl.submit()">
-        <p> You are free to add your own image and text and place them on any sponsored page on Addiction Network. This allows you to choose pages that related highly to the services you provide, as well as zero in on specific locations in the United States.</p>
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="tname">Treatment Centers: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            {{$ctrl.center_name}}
-          </div>
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
+
+        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
         </div>
-
-        <!-- <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub pading_0">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="tname"> Sponsor Ads: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12 class_for_select">
-            <div ng-dropdown-multiselect="" options="$ctrl.sponsored_ad_select" checkboxes="true" selected-model="$ctrl.multiselectModelLayoutIds " extra-settings="$ctrl.multiselectModelSettings"></div>
-
-          </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+          <!-- <div class="col-md-2 col-sm-2 col-xs-12">
+            <!-- <label for="tname">Treatment Center: </label>
         </div> -->
-
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="tname"> Normal: </label>
+          <div class="col-sm-8">
+            {{$ctrl.treatmentCenter}}
+            <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdNormal" checkboxes="true" selected-model="$ctrl.sponsoredAdNormalModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-
+          <div class="col-sm-4">
+            <a ui-sref="myProfile.sponsorAds">
+              <span class="btn adn-btn right">
+                <i class="glyphicon glyphicon-hand-left"></i> Back
+              </span>
+            </a>
+          </div>
+        </div>
+        <!-- Search By State Section -->
+        <sponsor-state-select-edit></sponsor-state-select-edit>
+        <sponsor-cart-edit></sponsor-cart-edit>
+        <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+          <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
+            <input type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Submit" id="submit" ng-disabled="$ctrl.treatmentCentersModel.length===0 || $root.centerSelected.length===0">
           </div>
         </div>
 
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="cpwd">State</label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdState" checkboxes="true" selected-model="$ctrl.sponsoredAdStateModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-          </div>
-        </div>
-
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="cpwd">County: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCounty" checkboxes="true" selected-model="$ctrl.sponsoredAdCountyModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-          </div>
-        </div>
-
-        <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="cpwd">City: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <div ng-dropdown-multiselect="" options="$ctrl.sponsoredAdCity" checkboxes="true" selected-model="$ctrl.sponsoredAdCityModel" extra-settings="$ctrl.multiselectModelSettings"></div>
-          </div>
-        </div>
-
-        <!-- <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="cpwd">Sidepanel: </label>
-          </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <sidepanel-multiselect></sidepanel-multiselect>
-          </div>
-        </div> -->
-
-        <div class="text-left col-md-8 col-sm-12 col-xs-8 col-lg-8 col-md-offset-4 col-lg-offset-4 col-sm-offset-4 main_wrap_form_inner_sub ">
-          <input class="btn btn-primary modal_btn pull-right btn_size " id="pay_sponsor_ad " value="Review " type="button " ng-disabled="" ng-click="$ctrl.submit()">
-          <span ng-show="$ctrl.success_msg " style="color:green; ">Updated</span>
-        </div>
-      </form>
+      </div>
     </div>
+
   </div>
 </div>
