--- a/app/myProfile/sponsorAds/view.html
+++ b/app/myProfile/sponsorAds/view.html
@@ -3,9 +3,9 @@
   <div class="profile-content">
 
     <div class="profile-row">
-      <a ui-sref="myProfile.sponsorAdsAdvertise">
+      <!-- <a ui-sref="myProfile.sponsorAdsAdvertise">
         <span class="btn adn-btn right">Advertise more</span>
-      </a>
+      </a> -->
       <div class="adn-table">
         <div id="no-more-tables">
           <table class="col-md-12 col-xs-12 col-sm-12  table-striped table-condensed cf padding_0">
@@ -32,8 +32,8 @@
                   {{list.name}}
                 </td>
                 <td data-title="Action ">
-                  <!-- <a href="/#/my-profile/sponsor-ads/view-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="View "><i class="glyphicon glyphicon-eye-open "></i></a>
-                  <a href="/#/my-profile/sponsor-ads/edit-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="Edit "><i class="glyphicon glyphicon-edit "></i></a> -->
+                  <a href="/#/my-profile/sponsor-ads/view-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="View "><i class="glyphicon glyphicon-eye-open "></i></a>
+                  <a href="/#/my-profile/sponsor-ads/edit-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="Edit "><i class="glyphicon glyphicon-edit "></i></a>
                   <!-- <a id="status-{{list.id}} " href="javascript:; " data-toggle="tooltip " data-placement="bottom " ng-click="$ctrl.actDect(list.id) "><i class=" " ng-show="list.active ">Deactivate</i><i class=" " ng-show="(list.active==false) ">Activate</i></a> -->
                   <a id="status-{{list.id}}" href="javascript:;" data-toggle="tooltip" data-placement="bottom" ng-click="$ctrl.actDect(list.id)"><i class="" ng-show="list.active">Deactivate</i><i class="" ng-show="(list.active==false)">Activate</i></a>
                 </td>
