--- a/app/sponsorHome/countyListBox/view.html
+++ b/app/sponsorHome/countyListBox/view.html
@@ -9,8 +9,8 @@
   <section ng-hide="$ctrl.displayError">
     <ul class="list-locations list-columns">
       <li ng-repeat="county in $ctrl.counties track by $index">
-        <a href ng-click="$ctrl.goToCounty(county)">
-          <i class="glyphicon glyphicon-map-marker"></i>{{ county }}
+        <a href ng-click="$ctrl.goToCounty(county.name)">
+          <i class="glyphicon glyphicon-map-marker"></i>{{ county.name }}
         </a>
       </li>
     </ul>
