updated api, view all cities, county

--- a/app/home/view.html
+++ b/app/home/view.html
@@ -6,7 +6,7 @@
         <!-- Welcome Section -->
         <welcome></welcome>
         <!-- Featured Treatment Center Section -->
-        <!-- <featured-treatment-center></featured-treatment-center> -->
+        <featured-treatment-center></featured-treatment-center>
         <!-- Search By State Section -->
         <search-by-state></search-by-state>
         <!-- footer ad -->
