City api changes
City api changes

--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -98,7 +98,7 @@
       <div class="col-md-8 col-sm-8 col-xs-12">
         <select ng-model="$root.city" ng-change="$ctrl.testZip()" name="city">
           <option value="">Select City</option>
-          <option ng-repeat="cities in $root.cities track by $index" value="{{cities}}">{{cities}}</option>
+           <option ng-repeat="cities in $root.cities track by $index" value="{{cities.name}}">{{cities.name}}</option>
         </select>
       </div>
     </div>
