--- a/app/myProfile/editTreatmentCenter/view.html
+++ b/app/myProfile/editTreatmentCenter/view.html
@@ -78,7 +78,7 @@
           <div class="col-md-8 col-sm-8 col-xs-12">
             <select ng-model="$ctrl.city" name="city" ng-change="$ctrl.testZip()" required="true">
               <option value="">Select City</option>
-              <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
+              <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities.name}}">{{cities.name}}</option>
             </select>
             <p class="help-block" ng-show="$ctrl.editCenter.city.$invalid">Required</p>
           </div>
