--- a/app/sidePanel/view.html
+++ b/app/sidePanel/view.html
@@ -6,10 +6,10 @@
       <img class="img-responsive" id="sidebar_ad">
     </a>
   </div>
-  <side-card type="Demographic"></side-card>
-  <side-card type="Treatment Approach"></side-card>
+  <side-card type="Demographies"></side-card>
+  <!-- <side-card type="Treatment Approach"></side-card>
   <side-card type="Setting"></side-card>
   <side-card type="Additional Services"></side-card>
   <side-card type="Payment"></side-card>
-  <side-card type="By Drug"></side-card>
+  <side-card type="By Drug"></side-card> -->
 </div>
