--- a/app/insurance/view.html
+++ b/app/insurance/view.html
@@ -7,36 +7,36 @@
           <h2 class="contct_heding">Insurance</h2>
         </div>
         <!-- BEGIN FORM-->
-        <form id="contactUs" name="$ctrl.contactUs" class="horizontal-form margin-bottom-40" ng-submit="$ctrl.submit()">
+        <form id="insuranceForm" name="$ctrl.insuranceForm" class="horizontal-form margin-bottom-40" ng-submit="$ctrl.submit()">
           <div class="col-md-12 col-sm-12 col-xs-12 pading_0">
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Contact First Name
                 <em class="em_star">*</em>
               </label>
               <input type="text" class="form-control" name="fname" ng-model="$ctrl.first_name" required="" autofocus="" id="name">
-              <span class="help-block" ng-show="$ctrl.contactUs.fname.$error.required">Required</span>
+              <span class="help-block" ng-show="$ctrl.insuranceForm.fname.$error.required">Required</span>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Contact Last Name
                 <em class="em_star">*</em>
               </label>
               <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="" id="lname">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <span class="help-block" ng-show="$ctrl.insuranceForm.lname.$error.required">Required</span>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Email
                 <em class="em_star">*</em>
               </label>
               <input type="text" class="form-control required" name="email" ng-model="$ctrl.email" email="true" required="" ng-pattern="/^(([^<>()\[\]\.,;:\s@\']+(\.[^<>()\[\]\.,;:\s@\']+)*)|(\'.+\'))@(([^<>()[\]\.,;:\s@\']+\.)+[^<>()[\]\.,;:\s@\']{2,})$/i" autofocus="">
-              <span ng-show="$ctrl.contactUs.email.$invalid" class="help-block">Required and please enter valid email</span>
+              <span ng-show="$ctrl.insuranceForm.email.$invalid" class="help-block">Required and please enter valid email</span>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Phone
                 <em class="em_star">*</em>
               </label>
               <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
-              <span ng-show="$ctrl.contactUs.phone.$error.pattern || $ctrl.contactUs.phone.$error.minlength || $ctrl.contactUs.phone.$error.maxlength" class="help-block">Invalid US number.</span>
-              <span ng-show="$ctrl.contactUs.phone.$error.required" class="help-block">Required</span>
+              <span ng-show="$ctrl.insuranceForm.phone.$error.pattern || $ctrl.insuranceForm.phone.$error.minlength || $ctrl.insuranceForm.phone.$error.maxlength" class="help-block">Invalid US number.</span>
+              <span ng-show="$ctrl.insuranceForm.phone.$error.required" class="help-block">Required</span>
 
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
@@ -47,22 +47,32 @@
               <label>First Name
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control" name="fname" ng-model="$ctrl.first_name" required="" autofocus="">
-              <span class="help-block" ng-show="$ctrl.contactUs.fname.$error.required">Required</span>
+              <input type="text" class="form-control" name="patient_fname" ng-model="$ctrl.first_name_patient" required="" autofocus="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.patient_fname.$error.required">Required</span>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Last Name
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="patient_lname" ng-model="$ctrl.last_name_patient" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.patient_lname.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Client DOB
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <!-- <input type="text" class="form-control" uib-datepicker-popup="{{dd/mm/yyyy}}" ng-model="$ctrldt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" /> -->
+              <p class="input-group">
+                <input type="text" class="form-control" name="client_dob" ng-click="$ctrl.openDobClient()" uib-datepicker-popup="{{$ctrl.format}}" ng-model="$ctrl.dob_client" is-open="$ctrl.popupClient.opened" datepicker-options="$ctrl.dateOptions" ng-required="true" close-text="Close" alt-input-formats="$ctrl.altInputFormats" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default"  ng-click="$ctrl.openDobClient()"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
+              <!-- <div uib-datepicker ng-model="dt" class="well well-sm" datepicker-options="options"></div> -->
+              <!-- <md-datepicker ng-model="$ctrl.myDate" md-placeholder="Enter date"></md-datepicker> -->
+              <!-- <date-picker ng-model="date"></date-picker> -->
+              <!-- <input type="text" class="form-control required" name="client_dob" ng-model="$ctrl.dob_client" autofocus="" required=""> -->
+              <span class="help-block" ng-show="$ctrl.insuranceForm.client_dob.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <h3>Insurance Info
@@ -72,69 +82,78 @@
               <label>Subscriber First Name
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control" name="fname" ng-model="$ctrl.first_name" required="" autofocus="">
-              <span class="help-block" ng-show="$ctrl.contactUs.fname.$error.required">Required</span>
+              <input type="text" class="form-control" name="sub_fname" ng-model="$ctrl.first_name_sub" required="" autofocus="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.sub_fname.$error.required">Required</span>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Subscriber Last Name
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="sub_lname" ng-model="$ctrl.last_name_sub" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.sub_lname.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Subscriber DOB
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <p class="input-group">
+                <input type="text" class="form-control" uib-datepicker-popup="{{$ctrl.format}}" ng-click="$ctrl.openDobSub()" name="sub_dob" ng-model="$ctrl.dob_sub" is-open="$ctrl.popupSub.opened" datepicker-options="$ctrl.dateOptions" ng-required="true" close-text="Close" alt-input-formats="$ctrl.altInputFormats" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="$ctrl.openDobSub()"><i class="glyphicon glyphicon-calendar"></i></button>
+                </span>
+              </p>
+              <!-- <input type="text" class="form-control required" name="sub_dob" ng-model="$ctrl.dob_sub" autofocus="" required=""> -->
+              <span class="help-block" ng-show="$ctrl.insuranceForm.sub_dob.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>SSN (Last 4)
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="sub_ssn" ng-model="$ctrl.ssn_sub" autofocus="" minlength="4" maxlength="4" ng-pattern="/^\d{4}$/" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.sub_ssn.$invalid">Invalid Ssn</span>
+
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Insurance Providers
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="ins_provider" ng-model="$ctrl.insurance_provider" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.ins_provider.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Insurance Policy #
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="ins_policy" ng-model="$ctrl.insurance_policy" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.ins_policy.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Group Number
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="group_num" ng-model="$ctrl.group_number" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.group_num.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Insurance Provider Phone Number
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <!-- <input type="text" class="form-control required" name="phone_num_ins" ng-model="$ctrl.phone_ins_provider" autofocus="" required=""> -->
+              <input ng-model="$ctrl.phone_ins_provider" type="text" name="phone_num_ins" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhoneIns()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
+              <span ng-show="$ctrl.insuranceForm.phone_num_ins.$error.pattern || $ctrl.insuranceForm.phone_num_ins.$error.minlength || $ctrl.insuranceForm.phone_num_ins.$error.maxlength" class="help-block">Invalid US number.</span>
+              <span class="help-block" ng-show="$ctrl.insuranceForm.phone_num_ins.$error.required">Required</span>
             </div>
             <div class="col-md-12 col-sm-12 col-xs-12 main_wrap_form_inner_sub">
               <label>Additional Notes
                 <em class="em_star">*</em>
               </label>
-              <input type="text" class="form-control required" name="lname" ng-model="$ctrl.last_name" autofocus="" required="">
-              <span class="help-block" ng-show="$ctrl.contactUs.lname.$error.required">Required</span>
+              <input type="text" class="form-control required" name="additional_notes" ng-model="$ctrl.additional_notes" autofocus="" required="">
+              <span class="help-block" ng-show="$ctrl.insuranceForm.additional_notes.$error.required">Required</span>
             </div>
           </div>
           <div class="col-md-12 col-sm-12 col-xs-12">
             <div class="log_btn_div btms_spaces col-md-12 col-sm-12 col-xs-12">
-              <input type="submit" id="submit_profile" class="btn btn-primary modal_btn pull-right" ng-disabled="$ctrl.contactUs.fname.$error.required || $ctrl.contactUs.lname.$error.required|| $ctrl.contactUs.email.$invalid || $ctrl.contactUs.phone.$invalid || $ctrl.contactUs.email.$invalid || $ctrl.contactUs.message.$invalid" value="Submit">
+              <input type="submit" id="submit_profile" class="btn btn-primary modal_btn pull-right" ng-disabled="$ctrl.insuranceForm.fname.$error.required || $ctrl.insuranceForm.lname.$error.required|| $ctrl.insuranceForm.email.$invalid || $ctrl.insuranceForm.phone.$invalid || $ctrl.insuranceForm.patient_fname.$invalid || $ctrl.insuranceForm.patient_lname.$invalid || $ctrl.insuranceForm.client_dob.$invalid || $ctrl.insuranceForm.sub_fname.$invalid || $ctrl.insuranceForm.sub_dob.$invalid || $ctrl.insuranceForm.sub_ssn.$invalid || $ctrl.insuranceForm.sub_lname.$invalid || $ctrl.insuranceForm.ins_provider.$invalid || $ctrl.insuranceForm.ins_policy.$invalid || $ctrl.insuranceForm.group_num.$invalid || $ctrl.insuranceForm.phone_num_ins.$invalid || $ctrl.insuranceForm.additional_notes.$invalid" value="Submit">
             </div>
           </div>
         </form>
