added thank you pages

--- a/app/contactUs/view.html
+++ b/app/contactUs/view.html
@@ -67,7 +67,7 @@
         <!--<strong>Loop, Inc.</strong>-->
 
         <p> </p>
-        <abbr title="Phone">P:</abbr>
+        <strong>Phone:</strong>
         <span class="invocaNumber">877-649-0306</span>
       </address>
       <address>
