--- a/app/myProfile/paymentDetails/edit/view.html
+++ b/app/myProfile/paymentDetails/edit/view.html
@@ -102,7 +102,7 @@
             <label for="cpwd">Default</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input name="default" ng-model="$ctrl.default" class="form-control default-payment" type="checkbox" />
+            <input name="default" ng-model="$ctrl.default" class="default-payment" type="checkbox" />
             <span>Use these credentials as your default payment method.</span>
           </div>
 
