--- a/app/myProfile/sponsorAds/edit/view.html
+++ b/app/myProfile/sponsorAds/edit/view.html
@@ -1,5 +1,5 @@
 <div class="edit-sponsor-ad">
-  <section-heading>Edit Sponsor Ad</section-heading>
+  <section-heading>{{$ctrl.treatmentCenter}}</section-heading>
   <div class="profile-content">
     <div class="profile-row">
 
@@ -14,7 +14,7 @@
             <!-- <label for="tname">Treatment Center: </label>
         </div> -->
           <div class="col-sm-8">
-            {{$ctrl.treatmentCenter}}
+            <!-- {{$ctrl.treatmentCenter}} -->
             <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
           </div>
           <div class="col-sm-4">
