--- a/app/myProfile/sponsorAds/edit/sponsoredAdsStateSelect/view.html
+++ b/app/myProfile/sponsorAds/edit/sponsoredAdsStateSelect/view.html
@@ -1,6 +1,6 @@
 <!-- <section-heading>Select State</section-heading> -->
 <!--- Map content  Start   -->
-<div class="col-sm-12 steps_sponsored">Step1: Click on the map to select state, county and city or <b>{{$ctrl.checkAllText}}</b>
+<div class="col-sm-12 steps_sponsored" style="margin-left:30px;">Step1: Click on the map to select state, county and city or <b>{{$ctrl.checkAllText}}</b>
   <input type="checkbox" name="" ng-model="$root.checkedAllStates" ng-change="$ctrl.selectStateAll()" ng-init="$ctrl.checkAllText=' Select all states'" />
 </div>
 <div onselectstart="return false;" class="unselectable col-sm-12">
