--- a/app/myProfile/sponsorAds/edit/sponsoredCart/view.html
+++ b/app/myProfile/sponsorAds/edit/sponsoredCart/view.html
@@ -1,12 +1,12 @@
 <!-- {{$root.cityModel}} {{$root.countyModel}} -->
 <div class="container">
   <div class="row">
-    <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;">
+    <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;margin-left:30px;">
       <div class="col-sm-12 steps_sponsored step3">Step 3: Confirm or Edit your selected options to advertise</div>
     </div>
   </div>
 </div>
-<div class="panel panel-info">
+<div class="panel panel-info" style="margin-left:30px;">
   <div class="panel-heading">
     <div class="panel-title">
       <div class="row">
@@ -24,7 +24,7 @@
   </div>
 </div>
 <!-- {{$root.treatmentCentersModel}} -->
-<table class="responstable">
+<table class="responstable" style="margin-left:30px;">
   <tbody>
     <tr>
       <td>
