--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -6,10 +6,10 @@
     <!--<form name="$ctrl.paymentDetailsForm" ng-submit="$ctrl.submit()">-->
     <!-- Card Number -->
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
+      <div class="col-md-12 col-sm-12 col-xs-12">
         <label for="name">Card Number: </label>
       </div>
-      <div class="col-md-8 col-sm-9 col-xs-12 ">
+      <div class="col-md-12 col-sm-12 col-xs-12 ">
         <div class="">
           <input placeholder="Card Number" style="float: left;" class="form-control" type="text" ng-keyup="$root.detectCardType($root.card, $event)" ng-change="" ng-maxlength="19" ng-model="$root.card" ng-pattern="/^[0-9' ']+$/" required="" name="card" maxlength="19" autocomplete="off">
           <i style="font-size: 40px; margin-top: -10px; color: #58aa22; position: absolute; margin-left: -43px;" class="icon large icon-{{$ctrl.cardType}}-card"></i>
@@ -23,10 +23,8 @@
     </div>
 
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
-        <label for="name">Name: </label>
-      </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="firstName">First Name: </label>
         <input placeholder="Name" name="firstName" class="form-control" type="text" ng-model="$root.firstName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.firstName.$invalid" class="help-block"> First Name</p>
       </div>
@@ -34,7 +32,8 @@
         <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$root.middleName" ng-maxlength="20" autocomplete="off">
         <span ng-show="$root.addlistForm.middleName.$invalid" class="help-block">Max-length(20) reached</span>
       </div> -->
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="lastName">Last Name: </label>
         <input placeholder="Last Name" name="lastName" class="form-control" type="text" ng-model="$root.lastName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.lastName.$invalid" class="help-block"> Last Name</p>
       </div>
@@ -42,11 +41,9 @@
 
     <!-- Expiry Year -->
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
+      <div class="col-md-4 col-sm-4 col-xs-12">
         <label for="name">Expiry Year: </label>
-      </div>
-      <div class="col-md-9 col-sm-9 col-xs-12">
-        <select ng-model="$root.year" ng-change="$ctrl.validateMonth()" name="year" required="">
+        <select ng-model="$root.year" ng-change="$ctrl.validateMonth()" name="year" required="" class="form-control">
           <option value="">Select Year</option>
           <option value="2017">2017</option>
           <option value="2018">2018</option>
@@ -59,14 +56,9 @@
         <p ng-show="$root.addlistForm.year.$invalid" class="help-block">Invalid Year</p>
         <p class="help-block" ng-if="$ctrl.curYear > $ctrl.year">Invalid year</p>
       </div>
-    </div>
-    <!-- Expiry Month -->
-    <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
+      <div class="col-md-4 col-sm-4 col-xs-12">
         <label for="name">Expiry Month: </label>
-      </div>
-      <div class="col-md-9 col-sm-9 col-xs-12">
-        <select ng-model="$root.month" ng-change="$ctrl.validateMonth()" name="month" required="">
+        <select ng-model="$root.month" ng-change="$ctrl.validateMonth()" name="month" required="" class="form-control">
           <option value="">Select Month</option>
           <option value="01">01</option>
           <option value="02">02</option>
@@ -83,50 +75,41 @@
         </select>
         <p ng-show="$root.addlistForm.month.$invalid || $ctrl.validMonth===0" class="help-block">Invalid Month</p>
       </div>
-    </div>
-    <!-- CVV Code -->
-    <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
+      <div class="col-md-4 col-sm-4 col-xs-12">
         <label for="cpwd">CVV Code</label>
-      </div>
-      <div class="col-md-3 col-sm-3 col-xs-12">
         <input name="cvv" ng-model="$root.cvv" class="form-control" type="password" placeholder="CVV Code" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="3" required="" maxlength="3" />
         <p ng-show="$root.addlistForm.cvv.$invalid" class="help-block">Invalid CVV Code</p>
       </div>
     </div>
     <!-- Address -->
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
+      <div class="col-md-12 col-sm-12 col-xs-12">
         <label for="cpwd">Address</label>
-      </div>
-      <div class="col-md-8 col-sm-9 col-xs-12">
         <input placeholder="Address" name="address" class="form-control" type="text" ng-model="$root.address" ng-minlength="2" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.address.$invalid" class="help-block">Address</p>
       </div>
     </div>
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
-        <label for="cpwd">State, City</label>
-      </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="cpwd">State</label>
         <input placeholder="State" name="state" class="form-control" type="text" ng-model="$root.state" ng-minlength="2" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.state.$invalid" class="help-block">State</p>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="cpwd">City</label>
         <input placeholder="City" name="city" class="form-control" type="text" ng-model="$root.city" ng-minlength="2" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.city.$invalid" class="help-block">City</p>
       </div>
     </div>
     <!-- Country -->
     <div class="adn-row">
-      <div class="col-md-3 col-sm-3 col-xs-12">
-        <label for="cpwd">Country, Zip</label>
-      </div>
-      <div class="col-md-4 col-sm-4 col-xs-12 ">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="cpwd">Country</label>
         <input placeholder="Country" name="country" class="form-control" type="text" ng-model="$root.country" ng-minlength="2" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.country.$invalid" class="help-block">Country</p>
       </div>
-      <div class="col-md-4 col-sm-4 col-xs-12">
+      <div class="col-md-6 col-sm-6 col-xs-12">
+        <label for="cpwd">Zip</label>
         <input placeholder="Zip" name="zip" class="form-control" type="text" ng-model="$root.zip" ng-minlength="5" ng-maxlength="5" maxlength="5" ng-pattern="/^\d{5}$/" required="" autocomplete="off">
         <p ng-show="$root.addlistForm.zip.$invalid" class="help-block">Invalid Zip</p>
       </div>
