--- a/app/insuranceThank/view.html
+++ b/app/insuranceThank/view.html
@@ -5,7 +5,8 @@
       <br>
       <p>Thank you. Your information has been received and a counselor with be in contact with you shortly to discuss your options.</p>
       <br>
-      <p> Thank you, Elite Rehab Placement Team</p>
+      <p> Thank you,
+        <br>Addiction Network</p>
     </div>
     <div class="col-lg-4 col-sm-4 col-md-4 col-xs-12">
       <div ng-init="$ctrl.sideAdvertisement = 0" ng-show="$ctrl.sideAdvertisement !== 1">
