--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,10 @@
         s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    <!--[if lte IE 8]>
+<script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
+<![endif]-->
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
     <base href="/" />
   </head>
 
