--- a/app/sponsorHome/countyListBox/view.html
+++ b/app/sponsorHome/countyListBox/view.html
@@ -9,7 +9,7 @@
   <section ng-hide="$ctrl.displayError">
     <ul class="list-locations list-columns">
       <li ng-repeat="county in $ctrl.counties track by $index">
-        <a href ng-click="$ctrl.goToCounty(county.name)">
+        <a href ng-click="$ctrl.goToCounty(county.slug)">
           <i class="glyphicon glyphicon-map-marker"></i>{{ county.name }}
         </a>
       </li>
