--- a/app/sponsorHome/cityListBox/view.html
+++ b/app/sponsorHome/cityListBox/view.html
@@ -9,7 +9,7 @@
   <section ng-hide="$ctrl.displayError">
     <ul class="list-locations list-columns">
       <li ng-repeat="city in $ctrl.cities track by $index">
-        <a href ng-click="$ctrl.goToCity({cityName: city.name})">
+        <a href ng-click="$ctrl.goToCity({cityName: city.slug})">
           <i class="glyphicon glyphicon-map-marker"></i>{{ city.name }}
         </a>
       </li>
