--- a/app/addListing/sponsoredPage/view.html
+++ b/app/addListing/sponsoredPage/view.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
     <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
-      <p class="heading_treatment_center">Choose your options below to advertise treatment center</p>
+      <p class="heading_treatment_center">Choose your options below to sponsor treatment center</p>
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
     </div>
