added capital filter

--- a/app/sidePanel/areaFilterCard/view.html
+++ b/app/sidePanel/areaFilterCard/view.html
@@ -1,6 +1,6 @@
 <div ng-show="$ctrl.display" class="side-card">
   <card-heading>
-    <label class="state_size">{{ $ctrl.fullName | capitalize }}</label>
+    <label class="state_size">{{ $ctrl.fullName | capitalize:true }}</label>
   </card-heading>
   <ul class="list-unstyled">
     <!-- <li>
