--- a/app/sponsorHome/cityListBox/view.html
+++ b/app/sponsorHome/cityListBox/view.html
@@ -1,6 +1,6 @@
 <div class="left_content">
   <section-heading>
-    Browse the Best Rehabs in {{ $ctrl.area }}
+    Browse the Best Rehabs in {{ $ctrl.area | firstlettercaps:true }}
   </section-heading>
 
   <!-- empty listings error-->
