added terms and condition page

--- a/app/themes/terms.html
+++ b/app/themes/terms.html
@@ -1,7 +1,7 @@
 <title>Terms and Conditions</title>
 <strong>Terms of Service</strong>
 <br>
-<br>Effective as of DATE HERE
+<br>Effective as of 19/07/2017
 <br>
 <br>
 
