added terms and condition page

--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -2,11 +2,6 @@
   <div class="adn-row">
     <h3 class="sub_heading_under_sign_up">Add Payment Details :</h3>
   </div>
-  <script>
-    function myFunction() {
-      window.open('themes/terms.html', 'Terms and Conditions', 'height=400,width=600');
-    }
-  </script>
   <div class="profile-row">
     <!--<form name="$ctrl.paymentDetailsForm" ng-submit="$ctrl.submit()">-->
     <!-- Card Number -->
@@ -120,21 +115,21 @@
       </div>
     </div>
     <!-- make default -->
-    <div class="adn-row">
-      <!-- <div class="col-md-3 col-sm-3 col-xs-12">
+    <!-- <div class="adn-row"> -->
+    <!-- <div class="col-md-3 col-sm-3 col-xs-12">
         <label for="cpwd">Agree</label>
       </div> -->
-      <div class="col-md-12 col-sm-12 col-xs-12">
+    <!-- <div class="col-md-12 col-sm-12 col-xs-12">
         <input name="default" ng-model="$root.terms" class="default-payment" type="checkbox" />
         <span>I agree to the <a href="" onclick="myFunction()">terms and condition</a></span>
-      </div>
+      </div> -->
 
-    </div>
+    <!-- </div> -->
     <!-- Submit -->
     <div class="adn-row">
       <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
         <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || ($ctrl.totalDigits<19) ||  $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid || $root.addlistForm.address.$invalid || $root.addlistForm.state.$invalid || $root.addlistForm.city.$invalid ||$root.addlistForm.zip.$invalid || $root.addlistForm.country.$invalid || !$root.terms">Next</button>
+        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || ($ctrl.totalDigits<19) ||  $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid || $root.addlistForm.address.$invalid || $root.addlistForm.state.$invalid || $root.addlistForm.city.$invalid ||$root.addlistForm.zip.$invalid || $root.addlistForm.country.$invalid">Next</button>
         <input class="btn modal_btn btn_size pull-right" ng-show="$root.paymentSkip" value="Skip" id="skip" type="button" ng-click="$ctrl.skipStep()">
       </div>
     </div>
