--- a/app/addListing/contactInfo/view.html
+++ b/app/addListing/contactInfo/view.html
@@ -1,10 +1,10 @@
 <div class="row">
   <input name="customertype" value="owner" type="hidden">
-  <script>
+  <!-- <script>
     function myFunction() {
       window.open('themes/terms.html', 'Terms and Conditions', 'height=400,width=600');
     }
-  </script>
+  </script> -->
   <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
     <div class="adn-row">
       <div class="col-md-6 col-sm-6 col-xs-12">
@@ -63,15 +63,15 @@
       <!-- <div class="col-md-3 col-sm-3 col-xs-12">
           <label for="cpwd">Agree</label>
         </div> -->
-      <div class="col-md-12 col-sm-12 col-xs-12">
+      <!-- <div class="col-md-12 col-sm-12 col-xs-12">
         <input name="default" ng-model="$root.terms" class="default-payment" type="checkbox" />
         <span>I agree to the <a href="" onclick="myFunction()">terms and condition</a></span>
-      </div>
+      </div> -->
     </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <!-- <input class="btn modal_btn btn_size pull-left" value="Next" id="submit" type="button" ng-click="$root.saveStep()" ng-disabled="$root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$invalid"> -->
       <input class="btn modal_btn btn_size pull-right" value="Skip" id="skip" type="button" ng-click="$ctrl.userCreated()" ng-if="$ctrl.showSkip==1">
-      <input class="btn modal_btn btn_size pull-right" value="Next" id="submit" type="button" ng-click="$ctrl.saveStep()" ng-disabled="$root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$invalid || $root.addlistForm.email.$invalid || $root.addlistForm.username.$error.required || $root.addlistForm.password.$invalid || $root.addlistForm.confirm_password.$error.noMatch || !$root.terms">
+      <input class="btn modal_btn btn_size pull-right" value="Next" id="submit" type="button" ng-click="$ctrl.saveStep()" ng-disabled="$root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$invalid || $root.addlistForm.email.$invalid || $root.addlistForm.username.$error.required || $root.addlistForm.password.$invalid || $root.addlistForm.confirm_password.$error.noMatch">
 
     </div>
   </div>
