--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -40,11 +40,11 @@
         <div class="about_div">
           <ul class="list-unstyled">
             <li>
-              <a href="#/about">
+              <a href="/about">
                 <span class="glyphicon glyphicon-chevron-right"></span>About Us</a>
             </li>
             <li>
-              <a href="#/treatment-center-map">
+              <a href="/treatment-center-map">
                 <span class="glyphicon glyphicon-chevron-right"></span>Find Treatment</a>
             </li>
             <li>
