--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -15,7 +15,8 @@
           <i style="font-size: 40px; margin-top: -10px; color: #58aa22; position: absolute; margin-left: -43px;" class="icon large icon-{{$ctrl.cardType}}-card"></i>
         </div>
         <p ng-show="$root.addlistForm.card.$invalid" class="help-block">Invalid Card number</p>
-        <p ng-if="($ctrl.totalDigits<19 || $ctrl.totalDigits>19) && $root.addlistForm.card.$valid" class="help-block">Card must be have 16 digits.</p>
+        <p ng-if="$ctrl.totalDigits != 16 && $ctrl.cardType != 'amex' && paymentDetailsForm.card.$valid" class="help-block">Card must be have 16 digits.</p>
+        <p ng-if="$ctrl.totalDigits != 15 && $ctrl.cardType == 'amex' && paymentDetailsForm.card.$valid" class="help-block">Card must be have 15 digits.</p>
         <!-- <p ng-show="$root.cardType" class="help-block">{{$root.cardType[0].niceType}}</p> -->
         <p ng-if="!$root.cardType[0] && $root.$valid" class="help-block">Invalid card type</p>
       </div>
