--- a/app/addListing/centerInfo/view.html
+++ b/app/addListing/centerInfo/view.html
@@ -117,14 +117,14 @@
       <div class="col-md-8 col-sm-8 col-xs-12">
         <input placeholder="Zip" id="pincode" ng-change="$ctrl.testZip()" name="pincode" class="form-control required" number="true" minlength="5" maxlength="5" type="text" ng-model="$root.pincode" ng-pattern="/^\d{5}$/" required="true">
         <p ng-show="$root.addlistForm.pincode.$invalid" class="help-block">Required and Zip code must be 5 digits</p>
-        <p ng-if="($ctrl.zipFound===0 && $root.addlistForm.pincode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</p>
+        <!-- <p ng-if="($ctrl.zipFound===0 && $root.addlistForm.pincode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</p> -->
       </div>
     </div>
     <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
       <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
       <input class="btn modal_btn btn_size pull-right" value="Next" id="submit" type="button" ng-click="$ctrl.GoStep5()" ng-disabled="$root.addlistForm.center_name.$invalid ||  $root.addlistForm.center_web_link.$invalid ||  $root.addlistForm.pincode.$error.required ||
       $root.addlistForm.pincode.$invalid || $root.addlistForm.intakephone.$error.required || $root.addlistForm.intakephone.$invalid ||
-      $root.addlistForm.description.$error.required || $root.addlistForm.state.$error.required || $root.addlistForm.center_name.$error.required || $root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$error.required || $root.addlistForm.intakeemail.$error.required || $root.addlistForm.username.$error.required || $root.addlistForm.address_line_1.$error.required || ($ctrl.zipFound===0)">
+      $root.addlistForm.description.$error.required || $root.addlistForm.state.$error.required || $root.addlistForm.center_name.$error.required || $root.addlistForm.user_last_name.$error.required || $root.addlistForm.user_first_name.$error.required || $root.addlistForm.user_company.$error.required || $root.addlistForm.user_phone.$error.required || $root.addlistForm.intakeemail.$error.required || $root.addlistForm.username.$error.required || $root.addlistForm.address_line_1.$error.required">
       <input class="btn modal_btn btn_size pull-right" ng-show="$root.centerSkip" value="Skip" id="skip" type="button" ng-click="$ctrl.skipStep()">
     </div>
   </div>
