--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -81,7 +81,7 @@
           <div class="col-md-8 col-sm-8 col-xs-12">
             <select ng-model="$ctrl.city" name="city" ng-change="$ctrl.testZip()" required="true">
               <option value="">Select City</option>
-              <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
+              <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities.name}}">{{cities.name}}</option>
             </select>
             <!-- <p ng-show="$ctrl.accountSetting.city.$invalid" class="help-block">Required</p> -->
           </div>
@@ -94,8 +94,8 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.zipcode" type="text" name="zipcode" ng-change="$ctrl.testZip()" class="form-control required" number="true" minlength="5" maxlength="5" ng-pattern="/^\d{5}$/" required="true" placeholder="14100" />
-            <!-- <span ng-show="$ctrl.accountSetting.zipcode.$invalid" class="help-block">Required and Zip code must be 5 digits</span> -->
-            <span ng-if="($ctrl.zipFound===0 && $ctrl.accountSetting.zipcode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</span>
+            <span ng-show="$ctrl.accountSetting.zipcode.$invalid" class="help-block">Required and Zip code must be 5 digits</span>
+            <!-- <span ng-if="($ctrl.zipFound===0 && $ctrl.accountSetting.zipcode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</span> -->
           </div>
         </div>
 
