hide the myprofile fields

--- a/app/myProfile/profileMain/view.html
+++ b/app/myProfile/profileMain/view.html
@@ -40,14 +40,14 @@
         </div>
       </div>
       <!-- About Me -->
-      <div class="adn-row">
+      <!-- <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
           <label>About Me:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
           <p>{{ $ctrl.profile.about_me }}</p>
         </div>
-      </div>
+      </div> -->
       <!-- Phone -->
       <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
@@ -58,23 +58,23 @@
         </div>
       </div>
       <!-- Address -->
-      <div class="adn-row">
+      <!-- <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
           <label>Address:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
           <p>{{ $ctrl.profile.address }}</p>
         </div>
-      </div>
+      </div> -->
       <!-- Zipcode -->
-      <div class="adn-row">
+      <!-- <div class="adn-row">
         <div class="col-md-4 col-sm-4 col-xs-6">
           <label>Zipcode:</label>
         </div>
         <div class="col-md-8 col-sm-8 col-xs-6">
           <p>{{ $ctrl.profile.zipcode }}</p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
