--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -44,7 +44,7 @@
         </div>
 
         <!-- About me -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="about">About Me:</label>
           </div>
@@ -88,7 +88,7 @@
         </div>
 
         <!-- Zipcode -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="zip"> Zipcode: </label>
           </div>
@@ -100,7 +100,7 @@
         </div>
 
         <!-- Address -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="addr"> Address: </label>
           </div>
