--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Country -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="country">Country</label>
           </div>
@@ -65,7 +65,7 @@
         </div>
 
         <!-- State -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="state"> State </label>
           </div>
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label>City</label>
           </div>
@@ -122,7 +122,7 @@
         </div>
 
         <!-- Upload Image -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="img_upload"> Upload Image: </label>
           </div>
