--- a/app/myProfile/paymentDetails/add/view.html
+++ b/app/myProfile/paymentDetails/add/view.html
@@ -121,7 +121,7 @@
           </div>
         </div>
         <!-- make default -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="cpwd">Default</label>
           </div>
