--- a/app/myProfile/paymentDetails/edit/view.html
+++ b/app/myProfile/paymentDetails/edit/view.html
@@ -41,7 +41,7 @@
         <div class="adn-row">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="name">Expiry Year: </label>
-            <select ng-model="$ctrl.year" name="year" ng-change="$ctrl.testYear($ctrl.year)" required=""  class="form-control">
+            <select ng-model="$ctrl.year" name="year" ng-change="$ctrl.testYear($ctrl.year)" required="" class="form-control">
               <option value="">Select Year</option>
               <option value="2017">2017</option>
               <option value="2018">2018</option>
@@ -80,7 +80,7 @@
         </div>
 
         <!-- make default -->
-        <div class="adn-row">
+        <div class="adn-row hide_it">
           <div class="col-md-4 col-sm-4 col-xs-12">
             <label for="cpwd">Default</label>
           </div>
