--- a/app/header/view.html
+++ b/app/header/view.html
@@ -19,7 +19,7 @@
     </div>
     <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
       <a id="header_ad_url">
-        <img class="img-responsive" id="header_ad" alt="Header advertisement">
+        <img class="img-responsive header_ad_url" id="header_ad" alt="Header advertisement">
       </a>
     </div>
   </div>
